@@ -31,7 +31,7 @@
 #define ELEMENTS_STRING_COUNT   133
 #define SCAN_STRING_COUNT        56
 #define STAR_NUMBER_COUNT        14
-#define PLANET_NUMBER_COUNT      32
+#define PLANET_NUMBER_COUNT      33
 #define MONTHS_STRING_COUNT      12
 #define FEEDBACK_STRING_COUNT     2
 #define STARBASE_STRING_COUNT     5
